# zata-ops

./: .dockerignore  .env.example  .gitignore  .iar.toml  .pre-commit-config.yaml  .testing.env.example  AGENTS.md  CLAUDE.md  MONITORING-STACK-PRIMER.md  README.md  docker-compose.testing.yml  justfile  justfile.shared  mkdocs.yml  pyproject.toml  typer-tutorial.md
.cursor/commands/: cursor.md
.github/: copilot-instructions.md
.github/instructions/: backend.instructions.md  docs.instructions.md  playwright.instructions.md  python-tests.instructions.md
.github/workflows/: cd.yml  ci.yml
deploy/monitoring/: .env.example  README.md  docker-compose.yml
deploy/vps-traefik/: .env.example  README.md  app.env.example  bootstrap.sh  docker-compose.yml  fix-acme-email.sh  github-actions-deploy.yml.example
docker/: Dockerfile
docs/: getting-started.md  index.md
docs/ai-standards/: architecture.md  code-reuse.md  comments-docstrings.md  documentation.md  index.md  (+3 more)
hooks/: archive_tasks.py  check_architecture.py  check_guidelines_consistency.py  check_max_file_lines.py  check_prd_acceptance_checklist.py  duplication_check_utils.py  run_jscpd_duplication_check.py  run_pylint_duplication_check.py
scripts/: README.md  git_worktree.sh  release.py  sync_template.sh
tests/: conftest.py  test_cli_smoke.py  test_db_backup.py  test_db_check.py  test_db_restore.py  test_env_provision.py  test_logs_dashboard.py  test_tunnel_close.py  test_tunnel_interactive.py  test_tunnel_list.py  test_tunnel_open.py  test_tunnel_password.py  test_tunnel_reconnect.py  test_tunnel_state.py
(+58 files in other folders)
