[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zata-ops"
version = "0.1.0"
description = "Operations toolkit CLI for Zata downstream projects (db backup/restore, S3 diagnostics, VPS provisioning, logs, dashboard)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.37.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.0",
    "questionary>=2.1.1",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
zata-ops = "zata_ops.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"zata_ops.env.templates" = ["*.sh"]

[dependency-groups]
dev = [
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-material>=9.6.0",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.30.0",
    "moto>=5.0.0",
    "pre-commit>=4.5.1",
    "pylint>=3.2.0",
    "pymdown-extensions>=10.14",
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
    "socksio>=1.0.0",
]
